unapplied/external-servers/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  ports:
    - name: https
      port: 8000
      targetPort: 8000
      protocol: TCP
