unapplied/external-servers/vaultwarden/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vaultwarden.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 8000
          scheme: https
          serversTransport: vaultwarden-insecure-transport
  tls:
    secretName: vaultwarden-certificate-secret
